--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html class="no-js" lang="de_DE">
+<html class="no-js" lang="de">
 
   {% include head.html %}
 
-  <body>
+  <body class="flex column">
 
     {% include header.html %}
 
     <main class="site-content">
       {{ content }}
     </main>
+
+    {% include footer.html %}
 
     {% include foot.html %}
 
