--- a/source/assets/_styles/modules/_heading-anchors.scss
+++ b/source/assets/_styles/modules/_heading-anchors.scss
@@ -2,9 +2,9 @@
 // Cards
 //
 
-.site-section h2,
-.site-section h3,
-.site-section h4 {
+.section h2,
+.section h3,
+.section h4 {
   position: relative;
 
   &:hover .heading-anchor {
