--- a/source/assets/_styles/modules/_timeline.scss
+++ b/source/assets/_styles/modules/_timeline.scss
@@ -3,99 +3,94 @@
 //
 
 .timeline {
-  @include respond-max(mediumMax) {
-    padding-left: 16px;
-  }
 
   &::before {
+    content: '';
     position: absolute;
-    left: 23.5px;
-    margin-left: -2px;
+    left: 8px;
     width: 4px;
     height: 100%;
-    background: color(lightGrey);
-    content: '';
-    z-index: z(default);
+    background: color(white);
 
     @include respond-min(medium) {
       left: 50%;
+      margin-left: -2px;
     }
   }
 }
 
 .step {
   z-index: z(surface);
+  padding-left: $timeline-step-padding;
 
   @include respond-min(medium) {
     width: 50%;
   }
 
-  &_first {
-    margin: 0 0 6px;
-    top: -4px;
-  }
-
-  &_last {
-    margin-bottom: 0;
-  }
-
   &_category,
   &_title {
+    margin-top: 10px;
+    line-height: 1.125;
 
     &::before {
       position: absolute;
-      border: 4px solid color(lightGrey);
+      border: 4px solid color(white);
       border-radius: 50%;
-      background: color(white);
+      background: color(lightGrey);
       content: '';
     }
   }
 
+  &--alpha {
+    top: -12px;
+  }
+
+  &--omega {
+    margin-bottom: 20px;
+  }
+
   &_category::before {
-    width: 24px;
-    height: 24px;
-    top: 4px;
+    width: $timeline-diameter-big;
+    height: $timeline-diameter-big;
+    top: 2px;
 
     @include respond-max(mediumMax) {
-      left: -40px;
+      left: -43px;
     }
   }
 
   &_title::before {
-    width: 12px;
-    height: 12px;
-    top: 7px;
+    width: $timeline-diameter-small;
+    height: $timeline-diameter-small;
+    top: 5px;
 
     @include respond-max(mediumMax) {
-      left: -34px;
+      left: -36px;
     }
   }
 
   &:nth-of-type(odd) {
-    @include respond-max(mediumMax) {
-      padding-left: 32px;
-    }
 
     @include respond-min(medium) {
-      padding-right: 32px;
+      padding-right: $timeline-step-padding;
       text-align: right;
     }
 
     .step_category::before {
       @include respond-min(medium) {
-        right: -48px;
+        right: -52.5px;
       }
     }
 
     .step_title::before {
       @include respond-min(medium) {
-        right: -42px;
+        right: -45.75px;
+
       }
     }
   }
 
   &:nth-of-type(even) {
-    padding-left: 32px;
 
     @include respond-min(medium) {
       align-self: flex-end;
@@ -103,14 +98,21 @@
 
     .step_category::before {
       @include respond-min(medium) {
-        left: -48px;
+        left: -52.5px;
       }
     }
 
     .step_title::before {
       @include respond-min(medium) {
-        left: -42px;
+        left: -45.75px;
       }
     }
   }
+}
+
+.check {
+  width: 20px;
+  height: 15px;
+  fill: color(white);
+  margin-left: 5px;
 }
