--- a/source/assets/_styles/utility/_susy_map.scss
+++ b/source/assets/_styles/utility/_susy_map.scss
@@ -4,7 +4,7 @@ $susy: (
   // math: fluid,
   // output: float,
   // gutter-position: after,
-  container: 700px,
+  container: 95%,
   // container-position: center,
   columns: 12,
   gutters: 0,
