--- a/source/_includes/foot.html
+++ b/source/_includes/foot.html
@@ -1,7 +1,7 @@
-<a data-scroll id="js-beam-me-up" class="beam-me-up" href="#site-header">
+<a data-scroll id="js-beam-me-up" class="beam-me-up flex center has-bgc--light" href="{{ site.baseurl }}/#site-header">
   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="32" viewBox="0 0 20 32">
     <path fill="#404640" d="M10 8L0 18l4 4 6-6 6 6 4-4L10 8z"/>
   </svg>
 </a>
 
-<script src="{{ "/assets/scripts/main.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+<script src="{{ "/assets/scripts/" | prepend: site.baseurl | append: site.data.assets.main.js }}" type="text/javascript"></script>
