--- a/source/assets/_styles/base/_animations.scss
+++ b/source/assets/_styles/base/_animations.scss
@@ -2,15 +2,22 @@
 // Animations
 //
 
+[data-aos] {
+  transition-duration: 0.3s;
+}
+
 [data-aos="fadeIn"] {
   opacity: 0;
   transform: translateY(32px);
-  transition-duration: 0.3s;
-  transition-property: opacity, transform;
 
   &.aos-animate {
     opacity: 1;
     transform: translateY(0);
+
+    .step_category::before,
+    .step_title::before {
+      opacity: 1;
+    }
   }
 }
 
@@ -18,11 +25,15 @@
 [data-aos="fadeIn"] .step_title::before {
   opacity: 0;
   transition-duration: 0.3s;
-  transition-property: opacity;
   transition-delay: 0.5s;
 }
 
-[data-aos="fadeIn"].aos-animate .step_category::before,
-[data-aos="fadeIn"].aos-animate .step_title::before {
-  opacity: 1;
+
+// Slider
+
+@keyframes fadeOut {
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
