--- a/source/assets/_styles/base/_globals.scss
+++ b/source/assets/_styles/base/_globals.scss
@@ -6,15 +6,19 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  outline: 0;
 }
 
 html {
   font-size: 16px;
-  font-family: sans-serif;
+  font-family: $font-stack;
+  line-height: 1.5;
 
   @include respond-min(medium) {
     font-size: 20px;
+  }
+
+  @include respond-min(xlarge) {
+    font-size: 24px;
   }
 }
 
@@ -23,74 +27,9 @@ body {
   height: 100%;
 }
 
-@font-face {
-  font-family: G;
-  src: url("/assets/fonts/Gidole-Regular.ttf");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: M;
-  src: url("/assets/fonts/Monoid-Regular.ttf");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: M;
-  src: url("/assets/fonts/Monoid-Italic.ttf");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: M;
-  src: url("/assets/fonts/Monoid-Bold.ttf");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: H;
-  src: url("/assets/fonts/Hack-Regular.ttf");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: H;
-  src: url("/assets/fonts/Hack-Bold.ttf");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: B;
-  src: url("/assets/fonts/Bitter-Regular.otf");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: B;
-  src: url("/assets/fonts/Bitter-Bold.otf");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: B;
-  src: url("/assets/fonts/Bitter-Italic.otf");
-  font-weight: 400;
-  font-style: italic;
-}
-
 body {
   background: color(white);
-  display: flex;
-  flex-direction: column;
-  font: 400 1rem/1.6 $font-stack;
+  font: 400 1em/1.5 $font-stack;
   color: color(darkGrey);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -101,7 +40,7 @@ body {
 a {
   text-decoration: none;
   outline: 0;
-  transition: .3s;
+  transition: 0.3s;
   color: color(accent);
   position: relative;
 
@@ -110,57 +49,52 @@ a {
   }
 }
 
+input,
+select,
+textarea {
+  cursor: pointer;
+  transition: 0.3s;
+  background: transparent;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: $global-radius;
+  font: inherit;
+  color: inherit;
+}
+
+option {
+  padding: 0 12px;
+}
+
+textarea {
+  height: 100px;
+  resize: none;
+
+  &:focus {
+    height: 250px;
+  }
+}
+
+
 img {
   max-width: 100%;
   height: auto;
   -ms-interpolation-mode: bicubic;
   display: inline-block;
   vertical-align: middle;
+  transition: 0.3s;
 }
 
-svg:not(:root) {
-  overflow: hidden;
-}
+
 
 button::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
 
-.container {
-  @include container;
-  padding-left:  16px;
-  padding-right: 16px;
-
-  // @include respond-min(medium) {
-  //   max-width: 700px;
-  // }
-
-  @include respond-min(large) {
-    max-width: 960px;
-  }
-
-  @include respond-min(xlarge) {
-    max-width: 1200px;
-  }
+ul {
+  margin-left: 15px;
 }
-
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.relative {
-  position: relative;
+li {
+  list-style: none;
 }
