--- a/source/assets/_styles/base/_headings.scss
+++ b/source/assets/_styles/base/_headings.scss
@@ -2,26 +2,57 @@
 // Headings
 //
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   font-family: B, serif;
   font-weight: 400;
   line-height: 1.25;
-  // margin-bottom: 10px;
   text-rendering: optimizeLegibility;
 }
 
 h1 {
-  font-size: 32px;
+  font: 32px/1.75 M, monospace;
+  color: color(lightGrey);
+
+  @include respond-min(small) {
+    font-size: 36px;
+  }
+
+  @include respond-min(medium) {
+    font-size: 48px;
+  }
+
+  @include respond-min(large) {
+    font-size: 60px;
+  }
 }
 h2 {
-  margin-top: 16px;
-  font-size: 28px;
+  font-size: 40px;
+  text-align: center;
+
+  @include respond-min(xlarge) {
+    font-size: 45px;
+  }
 }
 h3 {
-  margin-top: 24px;
-  font-size: 24px;
+  margin-bottom: 10px;
+  font-size: 30px;
+
+  @include respond-min(xlarge) {
+    font-size: 34px;
+  }
+
 }
 h4, h5, h6 {
-  margin-top: 16px;
-  font-size: 16px;
+  margin-bottom: 7.5px;
+  font-size: 25px;
+
+  @include respond-min(xlarge) {
+    font-size: 28px;
+  }
+}
+
+.sub-heading {
+  border-left: 4px solid color(accent);
+  padding-left: 12px;
+  line-height: 1;
 }
