--- a/source/assets/_styles/layout/_header.scss
+++ b/source/assets/_styles/layout/_header.scss
@@ -6,27 +6,24 @@
   flex: none;
   position: fixed;
   width: 100%;
-  padding: 7px 20px;
+  padding: $header-padding-small 20px;
   z-index: z(header);
   background: color(white);
   transition: .3s;
-  border-bottom: 1px solid color(lightGrey);
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 
   @include respond-min(medium) {
     &.is-maximized {
-      padding: 12px 20px;
+      padding: $header-padding-big 20px;
 
       .logo--two-brain-with-brand {
-        width: 350px;
-        height: 100px;
+        // width: 385px;
+        height: $logo-height-big;
       }
 
       .logo--two-brain-only {
-        width: 100px;
-        height: 100px;
+        // width: $logo-height-big;
+        height: $logo-height-big;
       }
     }
   }
@@ -37,8 +34,8 @@
   transition: .3s;
 
   &--two-brain-with-brand {
-    width: 300px;
-    height: 80px;
+    // width: 300px;
+    height: $logo-height-small;
 
     @include respond-max(logo-breakMax) {
       display: none;
@@ -46,8 +43,8 @@
   }
 
   &--two-brain-only {
-    width: 80px;
-    height: 80px;
+    // width: $logo-height-small;
+    height: $logo-height-small;
 
     @include respond-min(logo-break) {
       display: none;
