Implemented AJAX contact form submission

--- a/source/_pages/partials/contact.html
+++ b/source/_pages/partials/contact.html
@@ -72,10 +72,10 @@
       <input type="hidden" name="_format" value="plain" />
       <input type="text" name="_gotcha" style="display:none" />
 
-      <div class="margin-top">
+      <div class="cform_group margin-top">
         <label class="cform_label" for="user_message">Beschreibung:</label>
-        <textarea class="cform_field cform_field--textarea margin-top" name="user_message"></textarea>
-        <input class="btn btn--dark-bg mono-ui" type="submit" value="Senden ↦" />
+        <textarea class="cform_field cform_field--textarea" name="user_message"></textarea>
+        <input id="submit-form" class="btn btn--dark-bg mono-ui" type="submit" value="Senden ↦" />
       </div>
 
     </form>
