--- a/source/_pages/partials/services.html
+++ b/source/_pages/partials/services.html
@@ -46,7 +46,7 @@
           </p>
         </div>
         <a data-scroll class="btn btn--success mono-ui is-centered" href="{{ site.baseurl }}/#contact">
-          Und jetzt Sie! {% include icons/check.svg %}
+          Und jetzt Sie!
         </a>
       </div>
     </div>
