--- a/source/assets/_styles/base/_helper-classes.scss
+++ b/source/assets/_styles/base/_helper-classes.scss
@@ -59,6 +59,6 @@
 }
 
 .bullets {
-	background: url('/assets/images/bullets.svg') no-repeat left center;
+	background: url('/assets/images/icons/bullets.svg') no-repeat left center;
 	padding-left: 20px;
 }
